# raderbot

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  data.json  depth?symbol=BTCUSDT&limit=1000.json  docker-compose.yaml
docs/: strategies.md
scripts/: mongo.sh  sign.sh  ws.sh
src/: app.rs  bot.rs  main.rs
src/account/: account.rs  mod.rs  trade.rs
src/algo/: bollinger_bands.rs  builder.rs  ma_crossover.rs  ma_simple.rs  ma_three_crossover.rs  macd.rs  macd_bollinger.rs  mod.rs  rsi.rs  rsi_ema_sma.rs  template.rs  volume_breakout.rs  volume_continuation.rs  volume_continuation_reversal.rs  volume_profile.rs
src/algorithm/: bollinger_bands.rs  ma_crossover.rs  ma_simple.rs  ma_three_crossover.rs  macd.rs  macd_bollinger.rs  mod.rs  moving_average.rs  rsi.rs  rsi_ema_sma.rs  template.rs
src/analytics/: mod.rs  period.rs  volume.rs
src/api/: account.rs  exchange.rs  main.rs  market.rs  mod.rs  strategy.rs  utils.rs
src/exchange/: api.rs  binance.rs  bingx.rs  mock.rs  mod.rs  stream.rs  types.rs
src/market/: interval.rs  kline.rs  market.rs  messages.rs  mod.rs  ticker.rs  trade.rs  types.rs  volume.rs
src/storage/: db.rs  fs.rs  influx.rs  manager.rs  mod.rs  mongo.rs
src/strategy/: algorithm.rs  backer.rs  interval.rs  mod.rs  moving_average.rs  signal.rs  strategy.rs  types.rs
src/utils/: bson.rs  channel.rs  crypt.rs  csv.rs  json.rs  kline.rs  mod.rs  number.rs  time.rs  trade.rs
src/web/: mod.rs
static/: index.html
