[package]
name = "raderbot"
version = "0.1.0"
edition = "2021"

# [toolchain]
# channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
reqwest = { version = "0.11.1", features = ["blocking", "json"] }
tokio-tungstenite = {version = "0.16.0", features = ["native-tls"]}
futures-util = "0.3.28"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
url = "2.2.2"
tokio-tls = "0.3.1"
uuid = { version = "1.3.3", features = [ "v4", "fast-rng", "macro-diagnostics", "serde" ] }
futures = "0.3.28"
rand = "0.8.5"
actix-files = "0.6.2"
async-trait = "0.1.68"
chrono = "0.4.24"
bincode = "1.3.3"
directories = "5.0.1"
csv = "1.2.1"
dotenv = "0.15"
dotenv_codegen = "0.15"
# serde_urlencoded = "0.6"
hmac = "0.12.1"
hex-literal = "0.4.1"
sha2 = "0.10.6"
base64 = "0.21.2"
hex = "0.4"
# error-chain = "0.12.4"
actix-web-actors = "4.2.0"
actix = "0.13.0"
async-stream = "0.3.5"
regex = "1.8.3"
flate2 = "1.0.26"
env_logger = "0.10.0"
log = "0.4.18"
ta = "0.5.0"
dateparser = "0.2.1"
mongodb = "2.8.1"
# actix = "0.13.0"
# actix-rt = "2.8.0"

[dev-dependencies]
cargo-watch = "7.7.1"

[profile.release]
opt-level = 3
debug = false
# lto = true # Enables Link Time Optimization for further optimization
